Don't allow startup when default storage engine is specified to be a storage engine that is disabled. This was fixed once in 4.1, but regressed in 5.0 because of changes to storage engine initialization. (Bug #9815)